fix code wrap on comment form

--- a/style.css
+++ b/style.css
@@ -288,6 +288,9 @@ li.comment .reply {
 	outline: 0;
 	box-shadow: 0 3px 12px rgba( 100, 100, 100, 0.5 );
 }
+.form-allowed-tags code {
+	white-space: normal;
+}
 
 /*
 #####  #    # ##### #####  ####  #    #  ####
